// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[RadioButton Rendering] renders Checked without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        aria-label="Decorator Label"
        checked=""
        class="rcx-box rcx-box--full rcx-radio-button__input"
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[RadioButton Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        aria-label="Decorator Label"
        class="rcx-box rcx-box--full rcx-radio-button__input"
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[RadioButton Rendering] renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-radio-button"
    >
      <input
        aria-label="Decorator Label"
        class="rcx-box rcx-box--full rcx-radio-button__input"
        disabled=""
        type="radio"
      />
      <i
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-radio-button__fake"
      />
    </label>
  </div>
</body>
`;

exports[`[RadioButton Rendering] renders States without crashing 1`] = `
<body>
  <div>
    <table
      class="rcx-box rcx-box--full rcx-css-1s3wr6b"
      style="border-collapse: collapse;"
    >
      <thead
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <td
            aria-hidden="true"
            class="rcx-box rcx-box--full"
          />
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            checked
          </th>
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            unchecked
          </th>
        </tr>
      </thead>
      <tbody
        class="rcx-box rcx-box--full"
      >
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            default
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            hover
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-hovered"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-hovered"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            active
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-active"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-active"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            focus
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-focused"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button is-focused"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
        </tr>
        <tr
          class="rcx-box rcx-box--full"
        >
          <th
            class="rcx-box rcx-box--full rcx-color-font-hint rcx-font-c1"
          >
            disabled
          </th>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button"
              >
                <input
                  aria-label="Decorator Label"
                  checked=""
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  disabled=""
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
          <td
            class="rcx-box rcx-box--full rcx-css-yoolx6"
          >
            <div
              class="rcx-box rcx-box--full rcx-d-flex rcx-items-center rcx-justify-center"
            >
              <label
                class="rcx-box rcx-box--full rcx-radio-button"
              >
                <input
                  aria-label="Decorator Label"
                  class="rcx-box rcx-box--full rcx-radio-button__input"
                  disabled=""
                  type="radio"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-radio-button__fake"
                />
              </label>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
